--- a/build.gradle
+++ b/build.gradle
@@ -32,15 +32,12 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    // tag::jetty[]
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-jetty")
-    // end::jetty[]
-    // tag::actuator[]
-    // end::actuator[]
+
     testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 
@@ -48,6 +45,10 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'mysql:mysql-connector-java'
     compile group: 'org.hibernate', name: 'hibernate-core'
+
+    //tests
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.2.RELEASE'
+
 
 
 }
